Redid the sln and references since I had a Flaw in them.

--- a/src/Student.Tests/Student.Tests.csproj
+++ b/src/Student.Tests/Student.Tests.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Exercise\Exercise.csproj" />
+    <ProjectReference Include="..\Student\Student.csproj" />
   </ItemGroup>
 
 </Project>
